# wxcode-adm

./: docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_add_users_and_refresh_tokens_tables.py  002_add_tenants_memberships_invitations_transfers.py  003_add_billing_tables.py  004_add_audit_logs_table.py  005_add_oauth_mfa_tables.py  006_add_user_sessions_and_profile_columns.py  007_add_super_admin_columns.py  008_add_claude_wxcode_tenant_fields.py  009_add_plan_limits_fields.py  010_split_budget_quota_dual_fields.py
backend/src/wxcode_adm/: config.py  dependencies.py  main.py
backend/src/wxcode_adm/admin/: dependencies.py  jwt.py  router.py  schemas.py  service.py
backend/src/wxcode_adm/audit/: models.py  router.py  schemas.py  service.py
backend/src/wxcode_adm/auth/: dependencies.py  email.py  exceptions.py  jwks.py  jwt.py  models.py  oauth.py  password.py  router.py  schemas.py  seed.py  service.py
backend/src/wxcode_adm/billing/: dependencies.py  email.py  exceptions.py  models.py  router.py  schemas.py  service.py  stripe_client.py  webhook_router.py
backend/src/wxcode_adm/common/: crypto.py  exceptions.py  mail.py  rate_limit.py  redis_client.py  router.py
backend/tests/: conftest.py  test_auth.py  test_billing.py  test_claude_provisioning.py  test_cors.py  test_crypto.py  test_integration_health.py  test_oauth_mfa.py  test_platform_security.py  test_super_admin.py  test_tenant_guard.py  test_tenant_model_extension.py  test_tenants.py  test_user_account.py
(+313 files in other folders)
