[project]
name = "wxcode-adm"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.131.0",
    "uvicorn[standard]==0.41.0",
    "sqlalchemy==2.0.46",
    "asyncpg==0.31.0",
    "alembic==1.18.4",
    "pydantic-settings==2.13.1",
    "redis==5.3.1",
    "arq==0.27.0",
    # Phase 2 — Auth
    "PyJWT[crypto]==2.11.0",
    "pwdlib[argon2]==0.3.0",
    "itsdangerous==2.2.0",
    "slowapi==0.1.9",
    "fastapi-mail==1.6.2",
    # Phase 3 -- Multi-tenancy
    "python-slugify==8.0.4",
    # Phase 4 -- Billing
    "stripe[async]==14.3.0",
    # Phase 6 -- OAuth and MFA
    "authlib==1.6.8",
    "pyotp==2.9.0",
    "qrcode[pil]==8.2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "aiosqlite",
    "fakeredis==2.26.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wxcode_adm"]
